# Omnivault

./: .gitignore  CCTP_INTEGRATION_SUMMARY.md  README.md  docker-compose.yml  package-lock.json  package.json  vercel.json
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: CCTPTransferModal.tsx  CrossChainMessageHandler.tsx  FastTransferIndicator.tsx  Header.tsx  LayerZeroConfig.tsx  TransactionSuccess.tsx  WalletProvider.tsx  YieldMonitor.tsx
frontend/src/hooks/: useOmniVault.ts
frontend/src/idl/: omnivault.json  omnivault.ts
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  Deposit.tsx  Landing.tsx  Strategies.tsx  Withdraw.tsx
frontend/src/services/: attestation-monitor.ts  cctp-hooks.ts  cctp.ts  hybrid-orchestrator.ts  layerzero-official.ts  layerzero.ts  omnivault.ts
frontend/src/utils/: explorer.ts
scripts/: deploy.sh  generate-idl.js  test-usdc-operations.js
solana-program/: Anchor.toml  package-lock.json  package.json
solana-program/programs/omnivault/: Cargo.toml
solana-program/programs/omnivault/src/: lib.rs
solana-program/tests/: omnivault.ts
