[package]
name = "omnivault"
version = "0.1.0"
description = "OmniVault: Cross-Chain Yield Optimizer"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "omnivault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "1.17.0"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.3", features = ["no-entrypoint"] }
borsh = "0.10.3"
bytemuck = "1.14.0"

