[package]
name = "omnivault"
version = "0.1.0"
description = "OmniVault: Cross-Chain Yield Optimizer"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "omnivault"

[features]
# Keep optional features available, but not enabled by default:
no-entrypoint = []          
no-idl = []                 
no-log-ix-name = []         
cpi = ["no-entrypoint"]     

default = ["idl-build"]

idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build"
]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.0", features = ["token"] }